<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <item android:id="@+id/add_to_favs"
        android:title="Add to Favourites" />
    <item android:id="@+id/remove_from_favs"
        android:title="Remove from Favourites" />
    <item android:id="@+id/book"
        android:title="Book" />
    <item android:id="@+id/show_in_map"
        android:title="Show in Map" />
    <item android:id="@+id/remove"
        android:title="Remove" />
</menu>